horizontal spilling bug fix

--- a/frontend/landingpage/style.css
+++ b/frontend/landingpage/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 .navbar {
   background-color: #333;
@@ -98,7 +99,7 @@ html, body {
 }
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Roboto Slab", serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -109,10 +110,11 @@ body {
 main {
   flex: 1;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  padding: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  align-items: center;
   
 
 }
